# PanelScout

./: .gitignore  README.md  pyproject.toml
docs/: design-document.md  unit-acceptance-reports.md
src/panelscout/: __init__.py  cli.py  config.py
src/panelscout/adapters/: __init__.py  zaimanhua.py
src/panelscout/auth/: __init__.py
src/panelscout/crawler/: __init__.py  engine.py  fetcher.py  robots.py
src/panelscout/downloader/: __init__.py  discovery.py  fetcher.py  planner.py  status.py  workflow.py
src/panelscout/exporters/: __init__.py  _records.py  csv_exporter.py  json_exporter.py  markdown_exporter.py
src/panelscout/parsers/: __init__.py  zaimanhua.py
src/panelscout/storage/: __init__.py  database.py  models.py  repositories.py
src/panelscout/ui/: __init__.py  api.py  app_shell.py  server.py  shell.py  state.py
tests/: test_chapter_image_discovery.py  test_cli.py  test_config.py  test_detail_sync_workflow.py  test_download_workflow.py  test_downloader_planner.py  test_exporters.py  test_fetcher.py  test_robots.py  test_search_workflow.py  test_storage.py  test_ui.py  test_ui_api.py  test_ui_runner.py  test_zaimanhua_parser.py
tests/fixtures/zaimanhua/: chapter_15599_1001.html  details_15599.html  details_15599_updated_with_chapters.html  details_15599_with_chapters.html  robots.txt  search_weisample.html
