[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "panel-scout"
version = "0.1.0"
description = "Local metadata-first comic discovery and update tracking."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
panelscout = "panelscout.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/panelscout"]
